@startuml
    
Element *-- Card
Card *-- Deck

class User{
   -int coins
   -String username
   -List<Card> cards
   -Deck deck

}


class Battle{

}




abstract class Card{
    #Element type
    #String name
    #final int DAMAGE

    + {abstract}void attack()
}

class MonsterCard extends Card{
 +void attack()
}

class SpellCard extends Card{
 +void attack()
}

class Deck{
    -List<Card>cards
    +void selectCards(Stack<Card> cards)
    +List<Card> getCards()
}



class Package{
    - {static} final int CARD_COUNT
    - {static} final int PACKAGE_COST

    + Card openPackage()
   
}

class Store{
    +{static} Card buyPackage()
    +{static} void tradeCards()
}


class CardFactory{
    +{static} createCard()
}

enum Element{
    FIRE
    WATER
    NORMAL
}





@enduml